--- a/Marvel Rivals/Scalability.ini
+++ b/Marvel Rivals/Scalability.ini
@@ -1,6 +1,4 @@
 ;By VIPMACTEP | 2.4 | Ultra Potato | No Enemy Outlines | 27 Feb 2025, 9:56AM
-;ShadingQuality controls "black hair"
-;%LOCALAPPDATA%\Marvel\Saved\Config\Windows
 [ScalabilitySettings]
 
 [GlobalIlluminationQuality@0]
@@ -62,4 +60,162 @@ r.AnisotropicMaterials=0
 r.HairStrands.CamByVTPipe=0
 r.HairStrands.SkyLighting.IntegrationType=0
 r.HairStrands.Visibility.MSAA.SamplePerPixel=0
-;By VIPMACTEP | 2.4 | Ultra Potato | No Enemy Outlines | 27 Feb 2025, 9:56AM
+;By VIPMACTEP | 2.4 | Ultra Potato | No Enemy Outlines
+
+; shoober420 tweaks PERFORMANCE
+
+[SystemSettings]
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
+r.DefaultFeature.AntiAliasing=0
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.Bloom=False
+r.DefaultFeature.LensFlare=False
+r.DefaultFeature.MotionBlur=False
+r.DepthOfFieldQuality=0
+r.DistanceFieldAO=0
+r.AmbientOcclusion=False
+r.AmbientOcclusionStaticFraction=False
+r.AntiAliasing=0
+r.AutoExposure=False
+r.Bloom=False
+r.LensFlare=False
+r.MotionBlur=False
+r.DepthOfFieldQuality=0
+r.DistanceFieldAO=0
+r.FastBlurThreshold=0
+r.LensFlareQuality=0
+r.MaterialQualityLevel=0
+r.RefractionQuality=0
+r.SceneColorFringeQuality=0
+r.SeparateTranslucency=False
+r.ShadowQuality=0
+r.SSR.Quality=0
+r.SSS.SampleSet=0
+r.SSS.Scale=0
+r.PostProcessAAQuality=0
+r.MotionBlurQuality=0
+r.BlurGBuffer=0
+r.MaxAnisotropy=0
+r.BloomQuality=0
+r.LightFunction=0
+r.DetailMode=0
+r.TonemapperQuality=0
+r.MaterialQuality=0
+r.DepthOfField.MaxSize=0
+r.Tonemapper.Sharpen=0.0
+r.AmbientOcclusionLevels=0
+r.VolumetricFog=0
+r.FogDensity=0
+r.Atmosphere=0
+r.ParticleLightQuality=0
+r.ParticleLODBias=3
+r.OneFrameThreadLag=False
+r.MaterialQualityLevel=0
+r.LightShaftQuality=0
+grass.DensityScale=0
+foliage.DensityScale=0
+r.MobileHDR=False
+r.SSR=0
+r.RayTracing.Translucency.Shadows=0
+r.ContactShadows=0
+r.ParallelShadows=0
+r.Shadow.Preshadows=0
+r.CapsuleDirectShadows=0
+r.CapsuleIndirectShadows=0
+r.CapsuleShadows=0
+D3D12.PSO.DriverOptimizedDiskCache=1
+input.DisableHaptics=1
+r.AllowHDR=0
+r.AntiAliasingMethod=0
+r.DisableDistortion=1
+r.DontLimitOnBattery=1
+r.FilmGrain=0
+r.FXAA.Quality=0
+r.MSAACount=0
+r.D3D12.UseAllowTearing=0
+r.HDR.EnableHDROutput=0
+r.MotionBlur.Max=0
+r.RayTracing=0
+r.RayTracing.AmbientOcclusion=0
+r.RayTracing.Enable=0
+r.RayTracing.EnableInGame=0
+rhi.SyncInterval=0
+
+[/script/engine.renderersettings]
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
+r.DefaultFeature.AntiAliasing=0
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.Bloom=False
+r.DefaultFeature.LensFlare=False
+r.DefaultFeature.MotionBlur=False
+r.DepthOfFieldQuality=0
+r.DistanceFieldAO=0
+r.AmbientOcclusion=False
+r.AmbientOcclusionStaticFraction=False
+r.AntiAliasing=0
+r.AutoExposure=False
+r.Bloom=False
+r.LensFlare=False
+r.MotionBlur=False
+r.DepthOfFieldQuality=0
+r.DistanceFieldAO=0
+r.FastBlurThreshold=0
+r.LensFlareQuality=0
+r.MaterialQualityLevel=0
+r.RefractionQuality=0
+r.SceneColorFringeQuality=0
+r.SeparateTranslucency=False
+r.ShadowQuality=0
+r.SSR.Quality=0
+r.SSS.SampleSet=0
+r.SSS.Scale=0
+r.PostProcessAAQuality=0
+r.MotionBlurQuality=0
+r.BlurGBuffer=0
+r.MaxAnisotropy=0
+r.BloomQuality=0
+r.LightFunction=0
+r.DetailMode=0
+r.TonemapperQuality=0
+r.MaterialQuality=0
+r.DepthOfField.MaxSize=0
+r.Tonemapper.Sharpen=0.0
+r.AmbientOcclusionLevels=0
+r.VolumetricFog=0
+r.FogDensity=0
+r.Atmosphere=0
+r.ParticleLightQuality=0
+r.ParticleLODBias=3
+r.OneFrameThreadLag=False
+r.MaterialQualityLevel=0
+r.LightShaftQuality=0
+grass.DensityScale=0
+foliage.DensityScale=0
+r.MobileHDR=False
+r.SSR=0
+r.RayTracing.Translucency.Shadows=0
+r.ContactShadows=0
+r.ParallelShadows=0
+r.Shadow.Preshadows=0
+r.CapsuleDirectShadows=0
+r.CapsuleIndirectShadows=0
+r.CapsuleShadows=0
+D3D12.PSO.DriverOptimizedDiskCache=1
+input.DisableHaptics=1
+r.AllowHDR=0
+r.AntiAliasingMethod=0
+r.DisableDistortion=1
+r.DontLimitOnBattery=1
+r.FilmGrain=0
+r.FXAA.Quality=0
+r.MSAACount=0
+r.D3D12.UseAllowTearing=0
+r.HDR.EnableHDROutput=0
+r.MotionBlur.Max=0
+r.RayTracing=0
+r.RayTracing.AmbientOcclusion=0
+r.RayTracing.Enable=0
+r.RayTracing.EnableInGame=0
+rhi.SyncInterval=0
