--- a/Marvel Rivals/Scalability.ini
+++ b/Marvel Rivals/Scalability.ini
@@ -141,6 +141,10 @@ r.RayTracing.AmbientOcclusion=0
 r.RayTracing.Enable=0
 r.RayTracing.EnableInGame=0
 rhi.SyncInterval=0
+bEnableMouseSmoothing=False
+bViewAccelerationEnabled=False
+bDisableMouseAcceleration=False
+RawMouseInputEnabled=1
 
 [/script/engine.renderersettings]
 r.DefaultFeature.AmbientOcclusion=False
@@ -219,3 +223,13 @@ r.RayTracing.AmbientOcclusion=0
 r.RayTracing.Enable=0
 r.RayTracing.EnableInGame=0
 rhi.SyncInterval=0
+bEnableMouseSmoothing=False
+bViewAccelerationEnabled=False
+bDisableMouseAcceleration=False
+RawMouseInputEnabled=1
+
+[/script/engine.inputsettings]
+bEnableMouseSmoothing=False
+bViewAccelerationEnabled=False
+bDisableMouseAcceleration=False
+RawMouseInputEnabled=1
