--- a/The Thing/remaster/autoexec.cfg
+++ b/The Thing/remaster/autoexec.cfg
@@ -3,6 +3,8 @@ echo "r_tonemapping is Color Grading, 0 fixes washes out colors"
 echo "r_ao* is Ambient Occulsion settings"
 echo "r_spec_power 0 removes ugly white shine and washed out lights"
 
+echo "%USERPROFILE%\Saved Games\Nightdive Studios\The Thing"
+
 unbind space CROUCH
 bind lctrl CROUCH
 seta cc_enable "0"
