--- a/Marvel Rivals/GameUserSettings.ini
+++ b/Marvel Rivals/GameUserSettings.ini
@@ -1,3 +1,4 @@
+; %USERPROFILE%\AppData\Local\Marvel\Saved\Config\Windows
 [Internationalization]
 Culture=en
 
@@ -19,7 +20,7 @@ bUseDesiredScreenHeight=False
 [/Script/Marvel.MarvelGameUserSettings]
 AntiAliasingSuperSamplingMode=0
 SuperSamplingQuality=0
-CASSharpness=0.000000
+CASSharpness=0.800000
 ScreenPercentage=100.000000
 VoiceLanguage=
 bNvidiaReflex=False
@@ -28,7 +29,7 @@ bAMDAntiLag2=False
 bDlssFrameGeneration=False
 bFSRFrameGeneration=False
 bXeFrameGeneration=False
-DlssFrameGenerationCount=0
+DlssFrameGenerationCount=1
 MonitorIndex=-1
 MonitorID="MONITOR\\VIZ1046\\{4d36e96e-e325-11ce-bfc1-08002be10318}\\0001"
 bEnableConsole120Fps=False
