--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -9,6 +9,7 @@ echo "cl_net_buffer_ticks: Buffering to smooth over packet loss"
 echo "cl_ragdoll_limit: maximum number of ragdolls to display, -1 disables the limit"
 echo "cl_cq_min_queue: -1 disables the command queue, 0 allows the server to decide, and any other positive value requests a specific minimum queue size / LOCKED @ 0"
 echo "cl_clock_recvmargin_enable: Disables the new clock synchronization strategy: fixes input latency when 0 / REMOVED"
+echo "cl_clock_recvmargin_spew_interval: interval for displaying information related to the clock's received margin in the console"
 echo "cl_tickpacket_recvmargin_enable: Disables the new packet pacing method for user commands / REMOVED"
 echo "r_csgo_cmaa_quality (0-3): Off 0, Low 1, Medium 2, and High 3"
 echo "cl_input_enable_raw_keyboard 1 causes laggy controls and reversed WASD movement"
