--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -12,6 +12,7 @@ echo "cl_clock_recvmargin_enable: Disables the new clock synchronization strateg
 echo "cl_clock_recvmargin_spew_interval: interval for displaying information related to the clock's received margin in the console"
 echo "cl_tickpacket_desired_queuelength: 0 is default and best value for responsiveness"
 echo "cl_tickpacket_recvmargin_enable: Disables the new packet pacing method for user commands / REMOVED"
+echo "cq_min_queue_size: REMOVED"
 echo "r_csgo_cmaa_quality (0-3): Off 0, Low 1, Medium 2, and High 3"
 echo "cl_input_enable_raw_keyboard 1 causes laggy controls and reversed WASD movement"
 
