--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -36,6 +36,7 @@ cl_input_enable_raw_keyboard "0"
 cl_join_advertise "0"
 cl_joystick_enabled "0"
 cl_net_buffer_ticks "0"
+cl_net_buffer_ticks_use_interp "0"
 cl_obs_interp_enable "0"
 cl_obs_interp_pos_rate "0"
 cl_player_ping_mute "1"
