--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -13,6 +13,7 @@ echo "cl_clock_recvmargin_spew_interval: interval for displaying information rel
 echo "cl_tickpacket_desired_queuelength: 0 is default and best value for responsiveness"
 echo "cl_tickpacket_recvmargin_enable: Disables the new packet pacing method for user commands / REMOVED"
 echo "cq_min_queue_size: REMOVED"
+echo "cl_error_report_time: seconds that must elapse before printing a prediction error summary / 0 disables this feature"
 echo "r_csgo_cmaa_quality (0-3): Off 0, Low 1, Medium 2, and High 3"
 echo "cl_input_enable_raw_keyboard 1 causes laggy controls and reversed WASD movement"
 
@@ -24,6 +25,7 @@ cl_connectionretrytime_p2p "0"
 cl_cq_min_queue "-1"
 cl_debounce_zoom "0"
 cl_disable_deathcam_audio_mix_fade_out "1"
+cl_error_report_time "0"
 cl_hide_avatar_images "1"
 cl_http_log_enable "0"
 cl_hud_color "1"
