--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -14,6 +14,7 @@ echo "cl_tickpacket_desired_queuelength: 0 is default and best value for respons
 echo "cl_tickpacket_recvmargin_enable: Disables the new packet pacing method for user commands / REMOVED"
 echo "cq_min_queue_size: REMOVED"
 echo "cl_error_report_time: seconds that must elapse before printing a prediction error summary / 0 disables this feature"
+echo "cl_hud_telemetry_net_misdelivery_poor:  threshold for considering the packet delivery anomaly rate as poor / 0 to 100"
 echo "r_csgo_cmaa_quality (0-3): Off 0, Low 1, Medium 2, and High 3"
 echo "cl_input_enable_raw_keyboard 1 causes laggy controls and reversed WASD movement"
 
@@ -31,6 +32,7 @@ cl_http_log_enable "0"
 cl_hud_color "1"
 cl_hud_radar_scale "1.3"
 cl_hud_telemetry_frametime_show "0"
+cl_hud_telemetry_net_misdelivery_poor "0"
 cl_hud_telemetry_net_misdelivery_show "0"
 cl_hud_telemetry_ping_show "0"
 cl_hud_telemetry_serverrecvmargin_graph_show "0"
