--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -11,6 +11,7 @@ echo "cl_cq_min_queue: -1 disables the command queue, 0 allows the server to dec
 echo "cl_clock_recvmargin_enable: Disables the new clock synchronization strategy: fixes input latency when 0 / REMOVED"
 echo "cl_clock_recvmargin_spew_interval: interval for displaying information related to the clock's received margin in the console"
 echo "cl_tickpacket_desired_queuelength: 0 is default and best value for responsiveness"
+echo "cl_tickpacket_recvmargin_spew_interval: information about the tick packet receive margin output / 0 disables output"
 echo "cl_tickpacket_recvmargin_enable: Disables the new packet pacing method for user commands / REMOVED"
 echo "cq_min_queue_size: REMOVED"
 echo "cl_error_report_time: seconds that must elapse before printing a prediction error summary / 0 disables this feature"
@@ -37,6 +38,8 @@ cl_hud_telemetry_net_misdelivery_show "0"
 cl_hud_telemetry_ping_show "0"
 cl_hud_telemetry_serverrecvmargin_graph_show "0"
 cl_input_enable_raw_keyboard "0"
+cl_interp_ratio "0"
+cl_interpolate_report "0"
 cl_join_advertise "0"
 cl_joystick_enabled "0"
 cl_net_buffer_ticks "0"
