--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -76,6 +76,7 @@ fps_max "999"
 gameinstructor_enable "0"
 hud_scaling "1"
 joystick "0"
+net_allow_multicast "0"
 r_csgo_cmaa_enable "0"
 r_csgo_cmaa_extra_sharp "0"
 r_csgo_cmaa_quality "0"
