--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -77,6 +77,8 @@ gameinstructor_enable "0"
 hud_scaling "1"
 joystick "0"
 net_allow_multicast "0"
+net_showudp "0"
+net_showudp_remoteonly "0"
 r_csgo_cmaa_enable "0"
 r_csgo_cmaa_extra_sharp "0"
 r_csgo_cmaa_quality "0"
