--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -14,6 +14,7 @@ echo "cl_tickpacket_desired_queuelength: 0 is default and best value for respons
 echo "cl_tickpacket_recvmargin_spew_interval: information about the tick packet receive margin output / 0 disables output"
 echo "cl_tickpacket_recvmargin_enable: Disables the new packet pacing method for user commands / REMOVED"
 echo "cq_min_queue_size: REMOVED"
+echo "cl_usercmd_max_per_movemsg: number of client user commands (CUserCmds) that can be sent in a single client move message. This impacts how many actions the client can send to the server at once / 4 is default"
 echo "cl_error_report_time: seconds that must elapse before printing a prediction error summary / 0 disables this feature"
 echo "cl_hud_telemetry_net_misdelivery_poor:  threshold for considering the packet delivery anomaly rate as poor / 0 to 100"
 echo "r_csgo_cmaa_quality (0-3): Off 0, Low 1, Medium 2, and High 3"
@@ -61,6 +62,7 @@ cl_tickpacket_desired_queuelength "0"
 cl_tickpacket_recvmargin_enable "0"
 cl_tickpacket_recvmargin_spew_interval "0"
 cl_use_opens_buy_menu "0"
+cl_usercmd_max_per_movemsg "8"
 clientport "65007"
 con_enable "1"
 cq_buffer_bloat_msecs "0"
