--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -19,6 +19,7 @@ echo "cl_error_report_time: seconds that must elapse before printing a predictio
 echo "cl_hud_telemetry_net_misdelivery_poor:  threshold for considering the packet delivery anomaly rate as poor / 0 to 100"
 echo "r_csgo_cmaa_quality (0-3): Off 0, Low 1, Medium 2, and High 3"
 echo "cl_input_enable_raw_keyboard 1 causes laggy controls and reversed WASD movement"
+echo "sv_pvs_max_distance: maximum range to Potentially Visible Set (PVS) and Potentially Audible Set (PAS) checks, which can influence network optimization and the visibility/audio of objects and entities in the game / 0 is default and disables this feature"
 
 cl_allow_animated_avatars "0"
 cl_autohelp "0"
@@ -114,6 +115,7 @@ sv_cq_trim_bloat_remainder "0"
 sv_cq_trim_bloat_space "0"
 sv_cq_trim_catchup_remainder "0"
 sv_maxunlag "0"
+sv_pvs_max_distance "0"
 rate "1048576"
 ui_vanitysetting_team "ct"
 ui_vanitysetting_loadoutslot_ct "rifle1"
