--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -20,6 +20,7 @@ echo "cl_hud_telemetry_net_misdelivery_poor:  threshold for considering the pack
 echo "r_csgo_cmaa_quality (0-3): Off 0, Low 1, Medium 2, and High 3"
 echo "cl_input_enable_raw_keyboard 1 causes laggy controls and reversed WASD movement"
 echo "sv_pvs_max_distance: maximum range to Potentially Visible Set (PVS) and Potentially Audible Set (PAS) checks, which can influence network optimization and the visibility/audio of objects and entities in the game / 0 is default and disables this feature"
+echo "sv_clockcorrection_msecs: 0 disables movement smoothing"
 
 cl_allow_animated_avatars "0"
 cl_autohelp "0"
