--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -1,4 +1,5 @@
 echo "crippling depression"
+
 echo "r_show_build_info"
 echo "never use fps_max 0, increases latency"
 echo "cl_hide_avatar_images"
@@ -14,6 +15,8 @@ echo "cl_tickpacket_desired_queuelength: 0 is default and best value for respons
 echo "cl_tickpacket_recvmargin_spew_interval: information about the tick packet receive margin output / 0 disables output"
 echo "cl_tickpacket_recvmargin_enable: Disables the new packet pacing method for user commands / REMOVED"
 echo "cq_min_queue_size: REMOVED"
+echo "cq_buffer_bloat_msecs: REMOVED"
+echo "cq_buffer_bloat_msecs_max: LOCKED @64"
 echo "cl_usercmd_max_per_movemsg: number of client user commands (CUserCmds) that can be sent in a single client move message. This impacts how many actions the client can send to the server at once / 4 is default"
 echo "cl_error_report_time: seconds that must elapse before printing a prediction error summary / 0 disables this feature"
 echo "cl_hud_telemetry_net_misdelivery_poor:  threshold for considering the packet delivery anomaly rate as poor / 0 to 100"
