--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -5,7 +5,7 @@ echo "never use fps_max 0, increases latency"
 echo "cl_hide_avatar_images"
 echo "cl_allow_animated_avatars"
 echo "r_drawtracers_firstperson 0"
-echo "sv_maxunlag controls backtracking lag compensation, anything above 0.035 should be considered cheating"
+echo "sv_maxunlag controls backtracking lag compensation, anything above 0.035 should be considered cheating / LOCKED @ 0.2"
 echo "cl_net_buffer_ticks: Buffering to smooth over packet loss"
 echo "cl_ragdoll_limit: maximum number of ragdolls to display, -1 disables the limit"
 echo "cl_cq_min_queue: -1 disables the command queue, 0 allows the server to decide, and any other positive value requests a specific minimum queue size / LOCKED @ 0"
@@ -16,13 +16,13 @@ echo "cl_tickpacket_recvmargin_spew_interval: information about the tick packet 
 echo "cl_tickpacket_recvmargin_enable: Disables the new packet pacing method for user commands / REMOVED"
 echo "cq_min_queue_size: REMOVED"
 echo "cq_buffer_bloat_msecs: REMOVED"
-echo "cq_buffer_bloat_msecs_max: LOCKED @64"
+echo "cq_buffer_bloat_msecs_max: LOCKED @ 64"
 echo "cl_usercmd_max_per_movemsg: number of client user commands (CUserCmds) that can be sent in a single client move message. This impacts how many actions the client can send to the server at once / 4 is default"
 echo "cl_error_report_time: seconds that must elapse before printing a prediction error summary / 0 disables this feature"
 echo "cl_hud_telemetry_net_misdelivery_poor:  threshold for considering the packet delivery anomaly rate as poor / 0 to 100"
 echo "r_csgo_cmaa_quality (0-3): Off 0, Low 1, Medium 2, and High 3"
 echo "cl_input_enable_raw_keyboard 1 causes laggy controls and reversed WASD movement"
-echo "sv_pvs_max_distance: maximum range to Potentially Visible Set (PVS) and Potentially Audible Set (PAS) checks, which can influence network optimization and the visibility/audio of objects and entities in the game / 0 is default and disables this feature"
+echo "sv_pvs_max_distance: maximum range to Potentially Visible Set (PVS) and Potentially Audible Set (PAS) checks, which can influence network optimization and the visibility/audio of objects and entities in the game / LOCKED @ 0 and disables this feature"
 echo "sv_clockcorrection_msecs: 0 disables movement smoothing"
 
 cl_allow_animated_avatars "0"
