--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -24,6 +24,7 @@ echo "r_csgo_cmaa_quality (0-3): Off 0, Low 1, Medium 2, and High 3"
 echo "cl_input_enable_raw_keyboard 1 causes laggy controls and reversed WASD movement"
 echo "sv_pvs_max_distance: maximum range to Potentially Visible Set (PVS) and Potentially Audible Set (PAS) checks, which can influence network optimization and the visibility/audio of objects and entities in the game / LOCKED @ 0 and disables this feature"
 echo "sv_clockcorrection_msecs: 0 disables movement smoothing"
+echo "cl_interp_ratio: 0 / STOP INTERPING NOOB"
 
 cl_allow_animated_avatars "0"
 cl_autohelp "0"
@@ -118,6 +119,7 @@ sv_clockcorrection_msecs "0"
 sv_cq_trim_bloat_remainder "0"
 sv_cq_trim_bloat_space "0"
 sv_cq_trim_catchup_remainder "0"
+sv_disable_observer_interpolation "1"
 sv_maxunlag "0"
 sv_pvs_max_distance "0"
 rate "1048576"
