--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -162,6 +162,6 @@ bind del "+radialradio"
 bind end "+radialradio2"
 bind pgdn "+radialradio3"
 bind "KP_5" "coverme"
-bind "KP_6" 
+bind "KP_6" "getout"
 
 viewmodel_presetpos 2
