--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -161,7 +161,12 @@ bind rightarrow "radio3"
 bind del "+radialradio"
 bind end "+radialradio2"
 bind pgdn "+radialradio3"
+bind "KP_2" "report"
+bind "KP_3" "reportingin"
 bind "KP_5" "coverme"
 bind "KP_6" "getout"
+bind "KP_7" "needrop"
+bind "KP_8" "regroup"
+bind "KP_9" "takingfire"
 
 viewmodel_presetpos 2
