--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -163,6 +163,7 @@ bind end "+radialradio2"
 bind pgdn "+radialradio3"
 bind "KP_2" "report"
 bind "KP_3" "reportingin"
+bind "KP_4" "playerchatwheel CW.NeedQuiet urgay"
 bind "KP_5" "coverme"
 bind "KP_6" "getout"
 bind "KP_7" "needrop"
