--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -62,6 +62,7 @@ cl_radar_scale "0.3"
 cl_radar_square_with_scoreboard "0"
 cl_ragdoll_limit "0"
 cl_showloadout "1"
+cl_smooth "0"
 cl_sniper_auto_rezoom "1"
 cl_teamcounter_playercount_instead_of_avatars "1"
 cl_tickpacket_desired_queuelength "0"
