--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -24,6 +24,9 @@ echo "r_csgo_cmaa_quality (0-3): Off 0, Low 1, Medium 2, and High 3"
 echo "cl_input_enable_raw_keyboard 1 causes laggy controls and reversed WASD movement"
 echo "sv_pvs_max_distance: maximum range to Potentially Visible Set (PVS) and Potentially Audible Set (PAS) checks, which can influence network optimization and the visibility/audio of objects and entities in the game / LOCKED @ 0 and disables this feature"
 echo "sv_clockcorrection_msecs: 0 disables movement smoothing"
+echo "cl_particle_fallback_base: 0 = HQ / 4 = LOWEST"
+echo "cl_particle_fallback_multiplier: 1 = HQ / 3 = LOWEST"
+
 echo "cl_interp_ratio: 0 / STOP INTERPING NOOB"
 
 cl_allow_animated_avatars "0"
@@ -53,6 +56,8 @@ cl_net_buffer_ticks "0"
 cl_net_buffer_ticks_use_interp "0"
 cl_obs_interp_enable "0"
 cl_obs_interp_pos_rate "0"
+cl_particle_fallback_base "4"
+cl_particle_fallback_multiplier "3"
 cl_player_ping_mute "1"
 cl_player_ragdolls_collide "0"
 cl_playerspraydisable "1"
