--- a/Soldier of Fortune/autoexecHQ.cfg
+++ b/Soldier of Fortune/autoexecHQ.cfg
@@ -1,9 +1,10 @@
 echo "Soldier of Fortune HQ autoexec"
 echo "cl_maxfps 120+ will cause physics bugs, keep at 120"
 echo "cpu_speed needs to match cpu freqency in MHz"
-echo "cpu_memory needs to match video card memory amount in MBs"
+echo "cpu_memory needs to match video card memory amount in MBs, use Task Manager to get GPU memory amount"
 echo "logfile 2 to create console log"
 echo "gl_ext_palettedtexture is NOT in SoF"
+echo "SET CL_DISPLAYREFRESH TO MONITOR REFRESH RATE OR GAME WILL BE FORCED WINDOWED"
 
 set _sp_cl_info_vid_mode "4096x2160"
 set _sp_cl_vid_border "1"
