--- a/Soldier of Fortune/autoexecHQ.cfg
+++ b/Soldier of Fortune/autoexecHQ.cfg
@@ -4,7 +4,10 @@ echo "cpu_speed needs to match cpu freqency in MHz"
 echo "cpu_memory needs to match video card memory amount in MBs, use Task Manager to get GPU memory amount"
 echo "logfile 2 to create console log"
 echo "gl_ext_palettedtexture is NOT in SoF"
+
 echo "SET CL_DISPLAYREFRESH TO MONITOR REFRESH RATE OR GAME WILL BE FORCED WINDOWED"
+
+echo "SET S_MIXAHEAD TO HIGHER VALUE IF AUDIO CRACKLES (DEFAULT 0.1)"
 
 set _sp_cl_info_vid_mode "4096x2160"
 set _sp_cl_vid_border "1"
@@ -88,7 +91,7 @@ set r_nearclipdist "65535"
 set r_nocull "1"
 set rate "25000"
 set s_khz "44"
-set s_mixahead "0.045"
+set s_mixahead "0.05"
 set sc_framerate "120"
 set use_amd3d "1"
 set use_mmx "1"
