--- a/The Wheel of Time/WoTHQ.ini
+++ b/The Wheel of Time/WoTHQ.ini
@@ -98,8 +98,8 @@ ServerPackages=WhitecloakSkins
 WindowedViewportX=512
 WindowedViewportY=384
 WindowedColorBits=16
-FullscreenViewportX=2048
-FullscreenViewportY=1536
+FullscreenViewportX=1024
+FullscreenViewportY=768
 FullscreenColorBits=32
 Brightness=0.600000
 MipFactor=1.000000
@@ -124,8 +124,8 @@ bLowDetailGeometry=False
 ParticleDensity=255
 MaxDetailLevel=4
 MaxNumDecals=4095
-MasterDetailLevel=2
-GoreDetailLevel=2
+MasterDetailLevel=4
+GoreDetailLevel=4
 MaxClientTickRate=101
 LanguageExt=int
 LanguageExt=frt
@@ -229,10 +229,10 @@ DetailBias=-1.500000
 RefreshRate=60Hz
 DetailTextures=True
 FastUglyRefresh=False
-ScreenSmoothing=True
+ScreenSmoothing=False
 Resolution=Default
 DescFlags=1
-DisableVSync=False
+DisableVSync=True
 Description=3dfx Voodoo3
 
 [MetalDrv.MetalRenderDevice]
