--- a/Soldier of Fortune/autoexecHQ.cfg
+++ b/Soldier of Fortune/autoexecHQ.cfg
@@ -9,6 +9,8 @@ echo "SET CL_DISPLAYREFRESH TO MONITOR REFRESH RATE OR GAME WILL BE FORCED WINDO
 
 echo "SET S_MIXAHEAD TO HIGHER VALUE IF AUDIO CRACKLES (DEFAULT 0.1)"
 
+echo "FPS ABOVE 60 CAUSES PHYSICS BUGS, KEEP AT 60FPS"
+
 set _sp_cl_info_vid_mode "4096x2160"
 set _sp_cl_vid_border "1"
 set _sp_cl_vid_fov "1"
@@ -29,7 +31,7 @@ set cl_gun "1"
 set cl_lights "1"
 set cl_max_debris "8192"
 set cl_max_quads "8192"
-set cl_maxfps "120"
+set cl_maxfps "60"
 set cl_minfps "1"
 set cl_run "1"
 set cl_subtitles "0"
@@ -91,8 +93,8 @@ set r_nearclipdist "65535"
 set r_nocull "1"
 set rate "25000"
 set s_khz "44"
-set s_mixahead "0.05"
-set sc_framerate "120"
+set s_mixahead "0.1"
+set sc_framerate "60"
 set use_amd3d "1"
 set use_mmx "1"
 set vid_fullscreen "1"
