--- a/Soldier of Fortune/autoexecHQ.cfg
+++ b/Soldier of Fortune/autoexecHQ.cfg
@@ -9,7 +9,7 @@ echo "SET CL_DISPLAYREFRESH TO MONITOR REFRESH RATE OR GAME WILL BE FORCED WINDO
 
 echo "SET S_MIXAHEAD TO HIGHER VALUE IF AUDIO CRACKLES (DEFAULT 0.1)"
 
-echo "FPS ABOVE 60 CAUSES PHYSICS BUGS, KEEP AT 60FPS"
+echo "PHYSICS BUGS OCCUR AT 60+ FPS"
 
 set _sp_cl_info_vid_mode "4096x2160"
 set _sp_cl_vid_border "1"
