--- a/Soldier of Fortune/autoexecHQ.cfg
+++ b/Soldier of Fortune/autoexecHQ.cfg
@@ -11,7 +11,10 @@ echo "SET S_MIXAHEAD TO HIGHER VALUE IF AUDIO CRACKLES (DEFAULT 0.1)"
 
 echo "PHYSICS BUGS OCCUR AT 60+ FPS"
 
+set _sp_cl_cpu_cool "1"
+set _sp_cl_frame_delay "0"
 set _sp_cl_info_vid_mode "4096x2160"
+set _sp_cl_mumble "0"
 set _sp_cl_vid_border "1"
 set _sp_cl_vid_fov "1"
 set _sp_cl_vid_gl_texture_mag_filter "GL_LINEAR"
@@ -42,6 +45,7 @@ set cpu_mmx "1"
 set cpu_speed "5700"
 set fov "90"
 set fx_maxdebrisonscreen "64"
+set gamespyport "-999999999"
 set ghl_fast_lights "0"
 set ghl_gllight_max_lights "32"
 set ghl_light_method "3"
@@ -74,9 +78,11 @@ set gl_s3_s3tc "0"
 set gl_scissor_broken "0"
 set gl_skymip "0"
 set gl_swapinterval "0"
+set gl_textureclamp "1"
 set gl_texturemode "GL_LINEAR"
 set in_joystick "0"
 set ip_clientport "65009"
+set joy_avail "0"
 set logfile "0"
 set low_violence "0"
 set m_cursor_accel "0"
@@ -86,14 +92,18 @@ set m_sensitivity_x "4"
 set m_sensitivity_y "4"
 set maxentities "4096"
 set maxspectators "0"
+set menu_spm_settings_cl_maxfps "120"
 set noipx "1"
+set qport "-999999999"
 set r_dynamic "1"
 set r_farclipdist "65535"
 set r_nearclipdist "65535"
 set r_nocull "1"
+set r_novis "0"
 set rate "25000"
 set s_khz "44"
 set s_mixahead "0.1"
+set s3tc_avail "0"
 set sc_framerate "60"
 set use_amd3d "1"
 set use_mmx "1"
