--- a/Soldier of Fortune/autoexecHQ.cfg
+++ b/Soldier of Fortune/autoexecHQ.cfg
@@ -47,6 +47,7 @@ set fov "90"
 set fx_maxdebrisonscreen "64"
 set gamespyport "-999999999"
 set ghl_fast_lights "0"
+set ghl_gllight_directional "1"
 set ghl_gllight_max_lights "32"
 set ghl_light_method "3"
 set ghl_max_lights "32"
@@ -80,6 +81,8 @@ set gl_skymip "0"
 set gl_swapinterval "0"
 set gl_textureclamp "1"
 set gl_texturemode "GL_LINEAR"
+set gsc_port "-999999999"
+set gsc_server ""
 set in_joystick "0"
 set ip_clientport "65009"
 set joy_avail "0"
@@ -93,6 +96,9 @@ set m_sensitivity_y "4"
 set maxentities "4096"
 set maxspectators "0"
 set menu_spm_settings_cl_maxfps "120"
+set net_socksPort "-999999999"
+set net_socksServer ""
+set net_socksEnabled "0"
 set noipx "1"
 set qport "-999999999"
 set r_dynamic "1"
