--- a/Soldier of Fortune/autoexecHQ.cfg
+++ b/Soldier of Fortune/autoexecHQ.cfg
@@ -7,7 +7,7 @@ echo "gl_ext_palettedtexture is NOT in SoF"
 
 echo "SET _SP_CL_INFO_VID_MODE TO DESIRED RESOLUTION"
 
-echo "SET CL_DISPLAYREFRESH TO MONITOR REFRESH RATE OR GAME WILL BE FORCED WINDOWED"
+echo "SET GL_DISPLAYREFRESH TO MONITOR REFRESH RATE OR GAME WILL BE FORCED WINDOWED"
 
 echo "SET S_MIXAHEAD TO HIGHER VALUE IF AUDIO CRACKLES (DEFAULT 0.1)"
 
