--- a/Soldier of Fortune/autoexecHQ.cfg
+++ b/Soldier of Fortune/autoexecHQ.cfg
@@ -1,5 +1,5 @@
 echo "Soldier of Fortune HQ autoexec"
-echo "cl_maxfps 120+ will cause physics bugs, keep at 120"
+echo "cl_maxfps 60+ will cause physics bugs (crouch sliding), keep at 60"
 echo "cpu_speed needs to match cpu freqency in MHz"
 echo "cpu_memory needs to match video card memory amount in MBs, use Task Manager to get GPU memory amount"
 echo "logfile 2 to create console log"
@@ -11,7 +11,7 @@ echo "SET GL_DISPLAYREFRESH TO MONITOR REFRESH RATE OR GAME WILL BE FORCED WINDO
 
 echo "SET S_MIXAHEAD TO HIGHER VALUE IF AUDIO CRACKLES (DEFAULT 0.1)"
 
-echo "PHYSICS BUGS OCCUR AT 60+ FPS"
+echo "60+ FPS CAUSES PHYSICS BUGS (CROUCH SLIDING), VSYNC+60Hz or FRAME RATE LIMITER REQUIRED"
 
 set _sp_cl_cpu_cool "1"
 set _sp_cl_frame_delay "0"
