--- a/Clive Barker's Undying/SystemHQ.ini
+++ b/Clive Barker's Undying/SystemHQ.ini
@@ -239,10 +239,10 @@ ShinySurfaces=True
 Coronas=True
 HighDetailActors=True
 DetailBias=-1.500000
-RefreshRate=120Hz
+RefreshRate=60Hz
 DetailTextures=True
 FastUglyRefresh=False
-ScreenSmoothing=True
+ScreenSmoothing=False
 Resolution=Default
 
 [MetalDrv.MetalRenderDevice]
