--- a/Clive Barker's Undying/SystemHQ.ini
+++ b/Clive Barker's Undying/SystemHQ.ini
@@ -244,6 +244,7 @@ DetailTextures=True
 FastUglyRefresh=False
 ScreenSmoothing=False
 Resolution=Default
+DisableVSync=True
 
 [MetalDrv.MetalRenderDevice]
 Translucency=True
