--- a/Clive Barker's Undying/SystemVULKAN.ini
+++ b/Clive Barker's Undying/SystemVULKAN.ini
@@ -85,9 +85,9 @@ ServerActors=IpServer.UdpServerUplink MasterServerAddress=master.telefragged.com
 WindowedViewportX=800
 WindowedViewportY=600
 WindowedColorBits=16
-FullscreenViewportX=1600
-FullscreenViewportY=1200
-FullscreenColorBits=16
+FullscreenViewportX=1366
+FullscreenViewportY=768
+FullscreenColorBits=32
 Brightness=0.5
 MipFactor=1
 UseDirectDraw=True
