--- a/Clive Barker's Undying/SystemGLIDEHQ.ini
+++ b/Clive Barker's Undying/SystemGLIDEHQ.ini
@@ -244,7 +244,7 @@ DetailTextures=True
 FastUglyRefresh=False
 ScreenSmoothing=False
 Resolution=Default
-DisableVSync=True
+DisableVSync=False
 
 [MetalDrv.MetalRenderDevice]
 Translucency=True
