--- a/Clive Barker's Undying/SystemRENEWAL.ini
+++ b/Clive Barker's Undying/SystemRENEWAL.ini
@@ -1321,13 +1321,13 @@ ConfigPageSafeMode=(X=5,Y=96,XL=516,YL=280)
 CurvedSurfaces=True
 
 [VulkanDrv.VulkanRenderDevice]
-UseVSync=False
+UseVSync=True
 UsePrecache=True
 GammaCorrectScreenshots=True
 CorrectFOV=True
 UseExternalTextures=True
 DontStretchImage=False
-FPSLimit=999
+FPSLimit=60
 AnisotropicFiltering=16
 DisableTextureFiltering=False
 VkExclusiveFullscreen=True
