--- a/Clive Barker's Undying/SystemVULKANHQ.ini
+++ b/Clive Barker's Undying/SystemVULKANHQ.ini
@@ -630,13 +630,13 @@ ConfigPageDriver=(X=14,Y=273,XL=1634,YL=796)
 CurvedSurfaces=True
 
 [VulkanDrv.VulkanRenderDevice]
-UseVSync=False
+UseVSync=True
 UsePrecache=True
 GammaCorrectScreenshots=True
 CorrectFOV=True
 UseExternalTextures=True
 DontStretchImage=False
-FPSLimit=999
+FPSLimit=60
 AnisotropicFiltering=16
 DisableTextureFiltering=False
 VkExclusiveFullscreen=True
