--- a/The Wheel of Time/WoTHQ.ini
+++ b/The Wheel of Time/WoTHQ.ini
@@ -232,7 +232,7 @@ FastUglyRefresh=False
 ScreenSmoothing=False
 Resolution=Default
 DescFlags=1
-DisableVSync=True
+DisableVSync=False
 Description=3dfx Voodoo3
 
 [MetalDrv.MetalRenderDevice]
