--- a/Clive Barker's Undying/SystemVULKANHQ.ini
+++ b/Clive Barker's Undying/SystemVULKANHQ.ini
@@ -244,7 +244,7 @@ DetailTextures=True
 FastUglyRefresh=False
 ScreenSmoothing=False
 Resolution=Default
-DisableVSync=True
+DisableVSync=False
 
 [MetalDrv.MetalRenderDevice]
 Translucency=True
@@ -282,12 +282,12 @@ UsePrecache=True
 Use32BitTextures=True
 DescFlags=1
 UseVertexFog=True
-dwDeviceId=9860
-dwVendorId=4318
+dwDeviceId=29504
+dwVendorId=4098
 UseAGPTextures=False
 UseVideoMemoryVB=False
 UseVSync=False
-Description=NVIDIA GeForce RTX 4090
+Description=Radeon RX 5500 XT
 
 [SglDrv.SglRenderDevice]
 Translucency=True
@@ -619,11 +619,11 @@ Favorites[99]=
 
 [WindowPositions]
 GameLog=(X=854,Y=200,XL=512,YL=256)
-ConfigPageRenderer=(X=14,Y=273,XL=1634,YL=796)
-ConfigPageDetail=(X=14,Y=273,XL=1634,YL=796)
-ConfigPageFirstTime=(X=14,Y=273,XL=1634,YL=796)
-WizardDialog=(X=1088,Y=458,XL=1664,YL=1243)
-ConfigPageSafeMode=(X=14,Y=273,XL=1634,YL=796)
+ConfigPageRenderer=(X=5,Y=96,XL=516,YL=280)
+ConfigPageDetail=(X=5,Y=96,XL=516,YL=280)
+ConfigPageFirstTime=(X=5,Y=96,XL=516,YL=280)
+WizardDialog=(X=418,Y=140,XL=530,YL=440)
+ConfigPageSafeMode=(X=5,Y=96,XL=516,YL=280)
 ConfigPageDriver=(X=14,Y=273,XL=1634,YL=796)
 
 [WinDrv.CurvedSurfaces]
@@ -642,10 +642,10 @@ DisableTextureFiltering=False
 VkExclusiveFullscreen=True
 VkDebug=False
 VkDeviceIndex=0
-LightMode=OneXBlending
-GammaMode=D3D9
-AntialiasMode=Off
-LODBias=0
+LightMode=Normal
+GammaMode=XOpenGL
+AntialiasMode=MSAA_4x
+LODBias=-1
 BloomAmount=128
 Bloom=False
 OccludeLines=False
