--- a/Medal of Honor: Allied Assault/autoexecHQ.cfg
+++ b/Medal of Honor: Allied Assault/autoexecHQ.cfg
@@ -122,6 +122,10 @@ seta r_farplane_nocull "1"
 seta r_maxtermarks "4096"
 seta r_nocull "1"
 seta r_geForce3WorkAround "0"
+seta r_vidmode1024 "0"
+seta r_vidmodemax "1"
+seta r_texturebitslm "32"
+seta r_lowMemTextureSize "0"
 
 seta r_mode "-1"
 seta r_customwidth "4096"
