--- a/Medal of Honor: Allied Assault/autoexecHQ.cfg
+++ b/Medal of Honor: Allied Assault/autoexecHQ.cfg
@@ -3,6 +3,7 @@ echo "r_subdivisions 3- will cause map rendering errors"
 echo "r_forceClampToEdge 1 can help with black lines in the main menu and skybox in-game"
 echo "fps 1 draws fps graph"
 echo "r_sse 1 crashes game at loading screen"
+echo "Default FOV is 80"
 
 seta cl_running "1"
 seta cl_run "1"
@@ -22,7 +23,7 @@ seta cl_playintro "1"
 seta cg_shadows "2"
 seta cg_brasstime "999999999999999999999999999"
 seta cg_marks "1"
-seta cg_fov "105"
+seta cg_fov "80"
 seta cg_gibs "1"
 seta cg_deferplayers "1"
 seta cg_smoothclients "0"
@@ -126,6 +127,7 @@ seta r_vidmode1024 "0"
 seta r_vidmodemax "1"
 seta r_texturebitslm "32"
 seta r_lowMemTextureSize "0"
+seta r_ext_multisample "16"
 
 seta r_mode "-1"
 seta r_customwidth "4096"
