--- a/Medal of Honor: Allied Assault/autoexecHQ.cfg
+++ b/Medal of Honor: Allied Assault/autoexecHQ.cfg
@@ -5,6 +5,8 @@ echo "fps 1 draws fps graph"
 echo "r_sse 1 crashes game at loading screen"
 echo "Default FOV is 80"
 
+echo "config dir is %USERPROFILE/AppData/Roaming/openmohaa"
+
 seta cl_running "1"
 seta cl_run "1"
 seta cl_motd "0"
