--- a/Medal of Honor: Allied Assault/autoexecHQ.cfg
+++ b/Medal of Honor: Allied Assault/autoexecHQ.cfg
@@ -4,6 +4,7 @@ echo "r_forceClampToEdge 1 can help with black lines in the main menu and skybox
 echo "fps 1 draws fps graph"
 echo "r_sse 1 crashes game at loading screen"
 echo "Default FOV is 80"
+echo "TWEAK r_customwidth AND r_customheight BEFORE LAUNCH"
 
 echo "config dir is %USERPROFILE%/AppData/Roaming/openmohaa"
 
@@ -187,7 +188,7 @@ seta snaps "125"
 seta net_noipx "1"
 seta net_enabled "9"
 
-seta fov "105"
+seta fov "80"
 seta m_filter "0"
 seta in_mouse "1"
 seta sensitivity "3.5"
