--- a/Medal of Honor: Allied Assault/autoexecHQ.cfg
+++ b/Medal of Honor: Allied Assault/autoexecHQ.cfg
@@ -2,8 +2,8 @@ echo "MOHAA HQ CONFIG"
 echo "r_subdivisions 3- will cause map rendering errors"
 echo "r_forceClampToEdge 1 can help with black lines in the main menu and skybox in-game"
 echo "fps 1 draws fps graph"
-echo "r_sse 1 crashes game at loading screen"
-echo "r_maxpolys tweaked too high can crash the game"
+echo "r_sse 1 MIGHT crash game at loading screen"
+echo "r_maxpolys tweaked too high MIGHT crash the game"
 echo "Default FOV is 80"
 echo "TWEAK r_customwidth AND r_customheight BEFORE LAUNCH"
 
