--- a/Medal of Honor: Allied Assault/autoexecHQ.cfg
+++ b/Medal of Honor: Allied Assault/autoexecHQ.cfg
@@ -77,7 +77,7 @@ seta r_ssao "0"
 seta r_depthprepass "1"
 seta r_postprocess "1"
 seta r_hdr "1"
-seta r_tonemap "1"
+seta r_tonemap "0"
 seta r_autoexposure "0"
 seta r_ext_compressed_textures "1"
 seta r_ext_texture_filter_anisotropic "1"
@@ -132,6 +132,7 @@ seta r_vidmodemax "1"
 seta r_texturebitslm "32"
 seta r_lowMemTextureSize "0"
 seta r_ext_multisample "16"
+seta r_ext_framebuffer_multisample "16"
 
 seta r_mode "-1"
 seta r_customwidth "4096"
