--- a/Medal of Honor: Allied Assault/autoexecHQ.cfg
+++ b/Medal of Honor: Allied Assault/autoexecHQ.cfg
@@ -5,7 +5,8 @@ echo "fps 1 draws fps graph"
 echo "r_sse 1 MIGHT crash game at loading screen"
 echo "r_maxpolys tweaked too high MIGHT crash the game"
 echo "Default FOV is 80"
-echo "r_ext_compress_textures 1 ENABLES HQ TEXTURES"
+echo "r_ext_compressed_textures 1 ENABLES HQ TEXTURES"
+echo "r_tonemap 1 is BAD, changes colors"
 echo "TWEAK r_customwidth AND r_customheight BEFORE LAUNCH"
 
 echo "config dir is %USERPROFILE%/AppData/Roaming/openmohaa"
